blocchi header e prima section del main completata

--- a/index.html
+++ b/index.html
@@ -9,6 +9,52 @@
     <title>Responsive layout</title>
 </head>
 <body>
+
+    <header class="size-header">
+        <div class="container flex space-between align-center">
+            <div class="debug-box">LOGO</div>
+            <div class="debug-box"> NAVIGATION</div>
+        </div>
+    </header>
+
+    <main>
+        <section id="intro">
+            <div class="container">
+                <div class="cards">
+
+                    <div class="card">
+                        <div class="debug-box">Intro</div>
+                        <div class="debug-box">image</div>
+                    </div>
+
+                    <div class="card">
+                        <div class="debug-box">image</div>
+                        <div class="debug-box">title</div>
+                        <div class="debug-box">text</div>
+                    </div>
+
+                    <div class="card">
+                        <div class="debug-box">image</div>
+                        <div class="debug-box">title</div>
+                        <div class="debug-box">text</div>
+                    </div>
+
+                    <div class="card">
+                        <div class="debug-box">image</div>
+                        <div class="debug-box">title</div>
+                        <div class="debug-box">text</div>
+                    </div>
+
+                    <div class="card">
+                        <div class="debug-box">image</div>
+                        <div class="debug-box">title</div>
+                        <div class="debug-box">text</div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+    </main>
     
 </body>
 </html>
