blocchi section planning completi

--- a/index.html
+++ b/index.html
@@ -54,6 +54,24 @@
             </div>
         </section>
 
+        <section id="planning">
+            <div class="container columns">
+
+                <div class="column">
+                   <div class="debug-box2">image</div>
+                   <div class="debug-box2">title</div>
+                   <div class="debug-box2">text</div>
+                </div>
+
+                <div class="column">
+                    <div class="debug-box2">image</div>
+                    <div class="debug-box2">title</div>
+                    <div class="debug-box2">text</div>
+                    <div class="debug-box2">arrow</div>
+                </div>
+            </div>
+        </section>
+
     </main>
     
 </body>
