--- a/index.html
+++ b/index.html
@@ -72,6 +72,29 @@
             </div>
         </section>
 
+        <section id="testimonial">
+            <div class="container">
+                <div class="debug-box2">Testimonial</div>
+
+                <div class="card">
+                    <div class="debug-box2">Image</div>
+                    <div class="debug-box2">text</div>
+                </div>
+
+                <div class="card">
+                    <div class="debug-box2">Image</div>
+                    <div class="debug-box2">text</div>
+                </div>
+
+                <div class="card">
+                    <div class="debug-box2">Image</div>
+                    <div class="debug-box2">text</div>
+                </div>
+
+            </div>
+
+        </section>
+
     </main>
     
 </body>
