blocchi section benefits completata

--- a/index.html
+++ b/index.html
@@ -90,9 +90,56 @@
                     <div class="debug-box2">Image</div>
                     <div class="debug-box2">text</div>
                 </div>
-
             </div>
+        </section>
 
+        <section id="benefits">
+            <div class="container">
+                <div class="cards">
+
+                    <div class="card">
+                        <div class="debug-box2">01</div>
+                        <div class="debug-box2">title</div>
+                        <div class="debug-box2">text</div>
+                        <div class="debug-box2">link</div>
+                    </div>
+                    
+                    <div class="card">
+                        <div class="debug-box2">02</div>
+                        <div class="debug-box2">title</div>
+                        <div class="debug-box2">text</div>
+                        <div class="debug-box2">link</div>
+                    </div>
+
+                    <div class="card">
+                        <div class="debug-box2">03</div>
+                        <div class="debug-box2">title</div>
+                        <div class="debug-box2">text</div>
+                        <div class="debug-box2">link</div>
+                    </div>
+
+                    <div class="card">
+                        <div class="debug-box2">04</div>
+                        <div class="debug-box2">title</div>
+                        <div class="debug-box2">text</div>
+                        <div class="debug-box2">link</div>
+                    </div>
+
+                    <div class="card">
+                        <div class="debug-box2">05</div>
+                        <div class="debug-box2">title</div>
+                        <div class="debug-box2">text</div>
+                        <div class="debug-box2">link</div>
+                    </div>
+
+                    <div class="card">
+                        <div class="debug-box2">06</div>
+                        <div class="debug-box2">title</div>
+                        <div class="debug-box2">text</div>
+                        <div class="debug-box2">link</div>
+                    </div>
+                </div>
+            </div>
         </section>
 
     </main>
