blocchi section about-us completa

--- a/index.html
+++ b/index.html
@@ -142,6 +142,23 @@
             </div>
         </section>
 
+        <section id="about-us">
+            <div class="container columns">
+
+                <div class="column">
+                    <div class="debug-box2">title</div>
+                    <div class="debug-box2">text 1</div>
+                    <div class="debug-box2">text 2</div>
+                </div>
+
+                <div class="column">
+                    <div class="debug-box2">image</div>
+                    <div class="debug-box2">title 1</div>
+                    <div class="debug-box2">find me</div>
+                </div>
+            </div>
+        </section>
+
     </main>
     
 </body>
