--- a/index.html
+++ b/index.html
@@ -159,7 +159,23 @@
             </div>
         </section>
 
+        <section id="get-started">
+            <div class="container">
+
+                <div class="debug-box2">get started</div>
+                <div class="debug-box2">heading</div>
+                <div class="debug-box2">title</div>
+                <div class="debug-box2">text</div>
+                <div class="debug-box2">button</div>
+                <div class="debug-box2">copyright</div>
+            </div>
+        </section>
     </main>
+
+    <footer class="footer-size">
+        <div class="debug-box2">text1</div>
+        <div class="debug-box2">text2</div>
+    </footer>
     
 </body>
 </html>
