--- a/index.html
+++ b/index.html
@@ -12,8 +12,41 @@
 
     <header class="size-header">
         <div class="container flex space-between align-center">
-            <div class="debug-box">LOGO</div>
-            <div class="debug-box"> NAVIGATION</div>
+            <div class="debug-box">
+                <img src="img/logo.png" alt="logo">
+            </div>
+            <div class="debug-box"> 
+                <span class="hamburger">
+                    <i class="fa-solid fa-bars"></i>
+                </span>
+
+                <nav class="main-menu">
+
+                    <ul>
+
+                        <li>
+                            <a href="#">Planning</a>
+                        </li>
+
+                        <li>
+                            <a href="#">Testimonials</a>
+                        </li>
+
+                        <li>
+                            <a href="#">Features</a>
+                        </li>
+
+                        <li>
+                            <a href="#">About Us</a>
+                        </li>
+
+                        <li>
+                            <a class="btn white-btn black-txt" href="#">Get Started</a>
+                        </li>
+                    </ul>
+
+                </nav>
+            </div>
         </div>
     </header>
 
