--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet"> 
     <title>Responsive layout</title>
 </head>
 <body>
@@ -17,7 +18,7 @@
             </div>
             <div class="debug-box"> 
                 <span class="hamburger">
-                    <i class="fa-solid fa-bars"></i>
+                    <a class="white-txt" href="#"><i class="fa-solid fa-bars"></i></a>
                 </span>
 
                 <nav class="main-menu">
@@ -25,19 +26,19 @@
                     <ul>
 
                         <li>
-                            <a href="#">Planning</a>
+                            <a class="white-txt" href="#">Planning</a>
                         </li>
 
                         <li>
-                            <a href="#">Testimonials</a>
+                            <a class="white-txt" href="#">Testimonials</a>
                         </li>
 
                         <li>
-                            <a href="#">Features</a>
+                            <a class="white-txt" href="#">Features</a>
                         </li>
 
                         <li>
-                            <a href="#">About Us</a>
+                            <a class="white-txt" href="#">About Us</a>
                         </li>
 
                         <li>
