section intro elementi aggiunti

--- a/index.html
+++ b/index.html
@@ -57,36 +57,66 @@
                 <div class="cards">
 
                     <div class="card">
-                        <div class="debug-box">Intro</div>
-                        <div class="debug-box">image</div>
+                        <div class="debug-box">
+                             <h3>Get a demo application</h3>
+                             <p class="mb-20  w-80">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident, odio! Tempora quos, expedita quia dolor mollitia praesentium laborum aperiam ipsam?</p>
+                             <span class="btn big-btn blue-btn white-txt"><i class="fa-brands fa-apple"></i> App Store</span>
+                        </div>
+                        <div class="debug-box3 w-100">
+                            <img class="app-img" src="img/phone.png" alt="application">
+                        </div>
                     </div>
 
                     <div class="card">
-                        <div class="debug-box">image</div>
-                        <div class="debug-box">title</div>
-                        <div class="debug-box">text</div>
+                        <div class="debug-box">
+                            <div class="big-icon center"><i class="fa-solid fa-file-code"></i>
+                        </div>
+
+                        </div>
+                        <div class="debug-box">
+                            <h3 class="center"> Clean Code</h3>
+                            <p class="center">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident, odio! Tempora quos, expedita quia dolor mollitia praesentium laborum aperiam ipsam?</p>
+                        </div>
                     </div>
 
                     <div class="card">
-                        <div class="debug-box">image</div>
-                        <div class="debug-box">title</div>
-                        <div class="debug-box">text</div>
+                        <div class="debug-box">
+                            <div class="big-icon center"><i class="fa-solid fa-compass-drafting"></i>
+                        </div>
+
+                        </div>
+                        <div class="debug-box">
+                            <h3 class="center"> Web Design</h3>
+                            <p class="center">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident, odio! Tempora quos, expedita quia dolor mollitia praesentium laborum aperiam ipsam?</p>
+                        </div>
                     </div>
 
                     <div class="card">
-                        <div class="debug-box">image</div>
-                        <div class="debug-box">title</div>
-                        <div class="debug-box">text</div>
+                        <div class="debug-box">
+                            <div class="big-icon center"><i class="fa-solid fa-laptop-code"></i>
+                        </div>
+
+                        </div>
+                        <div class="debug-box">
+                            <h3 class="center"> Developement</h3>
+                            <p class="center">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident, odio! Tempora quos, expedita quia dolor mollitia praesentium laborum aperiam ipsam?</p>
+                        </div>
                     </div>
 
                     <div class="card">
-                        <div class="debug-box">image</div>
-                        <div class="debug-box">title</div>
-                        <div class="debug-box">text</div>
-                    </div>
-                </div>
-            </div>
-        </section>
+                        <div class="debug-box">
+                            <div class="big-icon center"><i class="fa-solid fa-bullhorn"></i>
+                        </div>
+
+                        </div>
+                        <div class="debug-box">
+                            <h3 class="center"> Branding</h3>
+                            <p class="center">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident, odio! Tempora quos, expedita quia dolor mollitia praesentium laborum aperiam ipsam?</p>
+                        </div>
+                  </div>
+              </div>
+          </div>
+      </section>
 
         <section id="planning">
             <div class="container columns">
