elementi aggiunti alla section planning responsive

--- a/index.html
+++ b/index.html
@@ -122,17 +122,23 @@
             <div class="container columns">
 
                 <div class="column">
-                   <div class="debug-box2">image</div>
-                   <div class="debug-box2">title</div>
-                   <div class="debug-box2">text</div>
+                   <div class="debug-box5">
+                     <img class="img-planning mb-20" src="img/planning1.png" alt="planning">
+                   </div>
+                   <div class="debug-box5">
+                    <h2 class="white-txt pb-50">Strategic Planning</h2>
+                    <p class="white-txt" >Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum expedita eum fuga nesciunt, perspiciatis ullam, placeat dolorum, possimus debitis dolore odio ipsa tenetur sunt hic autem sit repellendus. Facere dignissimos porro numquam ratione ad neque cupiditate! Distinctio aut iusto deleniti!</p>
+                </div>
                 </div>
 
-                <div class="column">
-                    <div class="debug-box2">image</div>
-                    <div class="debug-box2">title</div>
-                    <div class="debug-box2">text</div>
-                    <div class="debug-box2">arrow</div>
-                </div>
+                <div class="column center">
+                    <div class="debug-box4">
+                        <img class="img-planning mb-20"  src="img/planning2.png" alt="planning 2">
+                        <h3>App Developement</h3>
+                        <p class="mb-20"> <em>Develop an on-demand app for your delivery business to reach your targeter customers without any interruption</em> </p>
+                        <a href="#" class="m-top small-btn purple-btn"><i class="fa-solid fa-arrow-down-long black-txt"></i></a>
+                    </div>
+                </div> 
             </div>
         </section>
 
