section benefits responsive completata

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                         <img class="img-planning mb-20"  src="img/planning2.png" alt="planning 2">
                         <h3>App Developement</h3>
                         <p class="mb-20"> <em>Develop an on-demand app for your delivery business to reach your targeter customers without any interruption</em> </p>
-                        <a href="#" class="m-top small-btn purple-btn"><i class="fa-solid fa-arrow-down-long black-txt"></i></a>
+                        <a href="#" class="small-btn purple-btn"><i class="fa-solid fa-arrow-down-long black-txt"></i></a>
                     </div>
                 </div> 
             </div>
@@ -187,48 +187,95 @@
 
         <section id="benefits">
             <div class="container">
+
+                  <div class="debug-box5 center">
+                      <h2 class=" white-txt">Benefits of working with us</h2>
+                   </div>
+
                 <div class="cards">
 
-                    <div class="card">
-                        <div class="debug-box2">01</div>
-                        <div class="debug-box2">title</div>
-                        <div class="debug-box2">text</div>
-                        <div class="debug-box2">link</div>
+                     <div class="card">
+                        <div class="debug-box4 mt-30">
+                            <h2 class="purple-txt mb-20 bigger">01</h2>
+                            <h3 class="purple-txt">Hight Quality</h3>
+                        </div>
+
+                        <div class="debug-box4">
+                            <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate vero quos, cum atque asperiores ad perspiciatis quo officiis corrupti voluptatum.</p>
+                        </div>
+                        <div class="debug-box4">
+                            <div class="purple-btn white-txt center medium-btn spacing">more</div>
+                        </div>
                     </div>
                     
                     <div class="card">
-                        <div class="debug-box2">02</div>
-                        <div class="debug-box2">title</div>
-                        <div class="debug-box2">text</div>
-                        <div class="debug-box2">link</div>
+                        <div class="debug-box4 mt-30">
+                            <h2 class="purple-txt mb-20 bigger">02</h2>
+                            <h3 class="purple-txt">Creative Team</h3>
+                        </div>
+
+                        <div class="debug-box4">
+                            <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate vero quos, cum atque asperiores ad perspiciatis quo officiis corrupti voluptatum.</p>
+                        </div>
+                        <div class="debug-box4">
+                            <div class="purple-btn white-txt center medium-btn spacing">more</div>
+                        </div>
                     </div>
 
                     <div class="card">
-                        <div class="debug-box2">03</div>
-                        <div class="debug-box2">title</div>
-                        <div class="debug-box2">text</div>
-                        <div class="debug-box2">link</div>
+                        <div class="debug-box4 mt-30">
+                            <h2 class="purple-txt mb-20 bigger">03</h2>
+                            <h3 class="purple-txt">Amazing Results</h3>
+                        </div>
+
+                        <div class="debug-box4">
+                            <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate vero quos, cum atque asperiores ad perspiciatis quo officiis corrupti voluptatum.</p>
+                        </div>
+                        <div class="debug-box4">
+                            <div class="purple-btn white-txt center medium-btn spacing">more</div>
+                        </div>
                     </div>
 
                     <div class="card">
-                        <div class="debug-box2">04</div>
-                        <div class="debug-box2">title</div>
-                        <div class="debug-box2">text</div>
-                        <div class="debug-box2">link</div>
+                        <div class="debug-box4 mt-30">
+                            <h2 class="purple-txt mb-20 bigger">04</h2>
+                            <h3 class="purple-txt">Best Pricing</h3>
+                        </div>
+
+                        <div class="debug-box4">
+                            <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate vero quos, cum atque asperiores ad perspiciatis quo officiis corrupti voluptatum.</p>
+                        </div>
+                        <div class="debug-box4">
+                            <div class="purple-btn white-txt center medium-btn spacing">more</div>
+                        </div>
                     </div>
 
                     <div class="card">
-                        <div class="debug-box2">05</div>
-                        <div class="debug-box2">title</div>
-                        <div class="debug-box2">text</div>
-                        <div class="debug-box2">link</div>
+                        <div class="debug-box4 mt-30">
+                            <h2 class="purple-txt mb-20 bigger">05</h2>
+                            <h3 class="purple-txt">Innovations</h3>
+                        </div>
+
+                        <div class="debug-box4">
+                            <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate vero quos, cum atque asperiores ad perspiciatis quo officiis corrupti voluptatum.</p>
+                        </div>
+                        <div class="debug-box4">
+                            <div class="purple-btn white-txt center medium-btn spacing">more</div>
+                        </div>
                     </div>
 
                     <div class="card">
-                        <div class="debug-box2">06</div>
-                        <div class="debug-box2">title</div>
-                        <div class="debug-box2">text</div>
-                        <div class="debug-box2">link</div>
+                        <div class="debug-box4 mt-30">
+                            <h2 class="purple-txt mb-20 bigger">06</h2>
+                            <h3 class="purple-txt">24/7 Support</h3>
+                        </div>
+
+                        <div class="debug-box4">
+                            <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate vero quos, cum atque asperiores ad perspiciatis quo officiis corrupti voluptatum.</p>
+                        </div>
+                        <div class="debug-box4">
+                            <div class="purple-btn white-txt center medium-btn spacing">more</div>
+                        </div>
                     </div>
                 </div>
             </div>
