section responsive about-us completa

--- a/index.html
+++ b/index.html
@@ -285,15 +285,27 @@
             <div class="container columns">
 
                 <div class="column">
-                    <div class="debug-box2">title</div>
-                    <div class="debug-box2">text 1</div>
-                    <div class="debug-box2">text 2</div>
+                    <div class="debug-box4">
+                        <h2 class="purple-txt bigger">About us</h2>
+                    </div>
+                    <div class="debug-box4">
+                        <p class="l-height-30">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque, nostrum officia perferendis in, qui facilis ratione non quod et, alias deleniti ullam harum delectus ipsam sapiente voluptas ut cum perspiciatis excepturi corrupti numquam temporibus officiis? Deleniti, dolores fugit inventore asperiores sed itaque iusto sunt omnis harum, ex tempora officiis nobis?</p>
+                    </div>
+                    <div class="debug-box4">
+                        <p class="l-height-30">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur natus, eveniet aliquam vitae quae minus fugit numquam modi ad necessitatibus! Iste voluptate ipsum quasi aperiam consectetur sequi, harum sed rerum eligendi. Rerum odit modi iure molestias labore reprehenderit hic repellat!</p>
+                    </div>
                 </div>
 
                 <div class="column">
-                    <div class="debug-box2">image</div>
-                    <div class="debug-box2">title 1</div>
-                    <div class="debug-box2">find me</div>
+                    <div class="debug-box4 box-testimonial-left relative">
+                        <img class="testimonial-img" src="img/about.jpg" alt="inteview"> <i class="fa-solid fa-quote-left"></i>
+                    </div>
+                    <div class="debug-box4">
+                         <h3 class="purple-txt"> I help companies Lorem ipsum dolor sit, amet consectetur adipisicing elit.</h3>
+                    </div>
+                    <div class="debug-box4">
+                        <a href="#" class="medium-btn purple-btn white-txt center decoration"><i class="fa-brands fa-linkedin-in"></i> Find me on linkedin</a>
+                    </div>
                 </div>
             </div>
         </section>
