get started section (copyright da sistemare)

--- a/index.html
+++ b/index.html
@@ -313,12 +313,28 @@
         <section id="get-started">
             <div class="container">
 
-                <div class="debug-box2">get started</div>
-                <div class="debug-box2">heading</div>
-                <div class="debug-box2">title</div>
-                <div class="debug-box2">text</div>
-                <div class="debug-box2">button</div>
-                <div class="debug-box2">copyright</div>
+                <div class="debug-box5">
+                    <h5 class="center white-txt">GET STARTED</h5>
+                </div>
+                <div class="debug-box5">
+                    <h2 class="center white-txt ">Simple, Transparent, Pricing</h2>
+                </div>
+                <div class="debug-box5">
+                    <h1 class="center yellow-txt bigger">It's Free!</h1>
+                </div>
+                <div class="debug-box5">
+                    <p class="center white-txt">Lorem ipsum dolor sit amet consectetur adipisicing elit. A hic quas itaque vero quidem vitae enim, aliquid quod consequuntur nisi recusandae assumenda vel officiis! Amet.</p>
+                </div>
+                <div class="debug-box5">
+                    <a href="#" class="btn white-btn purple-txt big-btn decoration">Get Started </a>
+                </div>
+                <div class="debug-box5">
+                    <p> Copyright 2021 Boolean</p>
+                    <ul class="flex">
+                        <li class="white-txt pr-20">Classe XX</li> 
+                        <li class="white-txt"><a class="white-txt" href="#">Privacy policy</a></li>
+                    </ul>
+                </div>
             </div>
         </section>
     </main>
