footer responsive completo

--- a/index.html
+++ b/index.html
@@ -340,8 +340,12 @@
     </main>
 
     <footer class="footer-size">
-        <div class="debug-box2">text1</div>
-        <div class="debug-box2">text2</div>
+        <div class="debug-box2">
+            <p class="white-txt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque ipsa veniam nobis magni autem, in voluptatibus!</p>
+        </div>
+        <div class="debug-box2">
+         <p class="white-txt"> <a href="#" class="purple-txt">Lorem ipsum</a> scelerisque mauris pellentesque <a href="#" class="purple-txt"> Boolean careers</a></p>
+        </div>
     </footer>
     
 </body>
